fix: no word wrap in the accordion title

--- a/projects/tui-editor/components/editor-socket/styles/details.less
+++ b/projects/tui-editor/components/editor-socket/styles/details.less
@@ -10,7 +10,7 @@ summary {
     border-radius: var(--tui-radius-l);
     pointer-events: none;
     outline: none;
-    word-break: break-all;
+    word-break: break-word;
     padding: 0 4.6875rem 0 1.25rem;
 
     &:focus-visible {
